--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
     "dev": "bun run --watch src/index.ts",
     "db:generate": "bun drizzle-kit generate",
     "db:migrate": "bun drizzle-kit migrate",
-    "db:push": "bunx drizzle-kit push"
+    "db:push": "bunx drizzle-kit push",
+    "start": "bun run src/index.ts"
   },
   "dependencies": {
     "drizzle-orm": "^0.38.3",
