--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bcrypt": "^5.1.1",
     "drizzle-orm": "^0.38.4",
     "hono": "^4.6.20",
+    "jsonwebtoken": "^9.0.2",
     "pg": "^8.13.1",
     "z": "^1.0.9",
     "zod": "^3.24.1"
