Added a cookie auth middleware

--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,8 @@ DATABASE_URL=postgres://user:password@localhost:5432/postgres
 HOST=localhost
 PORT=3000
 
+LOCAL_HOST = "http://localhost:3000"
+
 JWT_SECRET="secret"
 
 MAIL_USERNAME = YOUR_EMAIL_USERNAME
