--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,6 @@ JWT_SECRET="secret"
 
 MAIL_USERNAME = YOUR_EMAIL_USERNAME
 MAIL_PASSWORD = YOUR_EMAIL_PASSWORD
+
+POSTGRES_USER=your-custom-postgres-user
+POSTGRES_PASSWORD=your-very-secret-password
