--- a/.dockerignore
+++ b/.dockerignore
@@ -1,6 +1,20 @@
 node_modules
+npm-debug.log
+yarn-debug.log
+yarn-error.log
 .git
+.gitignore
 .env
+.env.*
 *.md
+coverage
+dist
+.vscode
+.idea
+*.log
 drizzle
 drizzle.config.ts
+test
+.github
+.prettierrc
+.eslintrc
