run migration on startup

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-DATABASE_URL=postgres://user:password@localhost:5432/postgres
+DATABASE_URL=postgres://user:password@db:5432/postgres
 HOST=localhost
 PORT=3000
 
@@ -8,6 +8,3 @@ JWT_SECRET="secret"
 
 MAIL_USERNAME = YOUR_EMAIL_USERNAME
 MAIL_PASSWORD = YOUR_EMAIL_PASSWORD
-
-POSTGRES_USER=your-custom-postgres-user
-POSTGRES_PASSWORD=your-very-secret-password
