--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,5 @@
 services:
   api:
-    container_name: weave-api
     build:
       context: .
       dockerfile: Dockerfile
@@ -12,19 +11,25 @@ services:
     networks:
       - shared-network
     depends_on:
-      - db
-    
+      db:
+        condition: service_healthy
+
   db:
-    container_name: weave-pg
     image: postgres:15-alpine
     ports:
       - "5432:5432"
-    env_file:
-      - .env
+    environment:
+      - POSTGRES_USER=user
+      - POSTGRES_PASSWORD=password
     volumes:
       - postgres_data:/var/lib/postgresql/data
     networks:
       - shared-network
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U user -d postgres"]
+      interval: 2s
+      timeout: 5s
+      retries: 5
 
 volumes:
   postgres_data:
