--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-DATABASE_URL=postgres://user:password@localhost:5432/postgres
+DATABASE_URL=postgres://user:password@db:5432/postgres
 HOST=localhost
 PORT=3000
 
